@@ -30,23 +30,20 @@ description = 'Telegram bot to convert medias in the format required to be used 
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(20)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
-    options.compilerArgs += '--enable-preview'
 }
 
 test {
     useJUnitPlatform()
-    jvmArgs(['--enable-preview'])
 }
 
 application {
     mainClass = 'com.github.stickerifier.stickerify.runner.Main'
-    applicationDefaultJvmArgs = ['--enable-preview']
 }
 
 shadowJar {
